docs: add missing features to README
- Add Private Games, Practice Arenas, and Invis Practice sections
- Add 8 new add-ons to the table (36 total): private games, practice,
  invis practice, cooldown pearl, leave delay, blocked commands,
  arena tp protector, map command
- Expand core mechanics: dream defenders, bed bugs, pop-up towers,
  bridge eggs, base traps, heal pool, dragon buffs, match events
- Expand spectator teleporter GUI, party system (warp/home/polls),
  per-player language selection, leave delay & command control
- Add missing player commands (spawn, level, teleporter, map-gui,
  cosmetics, upgradesmenu, practice, invispractice, pg, /party)
- Add missing admin setup commands
- Add config files (blocked-commands, practice, invispractice,
  leave-delay)
- Add Optional Integrations section (SWM, Citizens, Vault, Parties)
- Add Java 21 requirement FAQ
- Remove Private Games from roadmap (already shipped)